change getFirst to get(0) getRoutineListById in RoutineService